Add changelog to README

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robot-npm-ip-holder",
-  "version": "1.0.1-onlyserver",
+  "version": "1.0.2-onlyserver",
   "description": "npm module for working with we service ipHolder",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/glabStrizhkov/robot-npm-ip-holder/issues"
   },
-  "homepage": "https://github.com/glabStrizhkov/robot-npm-ip-holder#readme",
+  "homepage": "https://github.com/glabStrizhkov/robot-npm-ip-holder/blob/master/README.md",
   "dependencies": {
     "axios": "^0.26.1",
     "os": "^0.1.2",
